# ai-skill-gap-analyst

./: .env.example  .env.working  .gitignore  API_SETUP.md  DEMO.md  README.md  README_NEW.md  README_OLD.md  app.py  backend_report.md  demo_cv_parser_complete.py  demo_report.md  devops_report.md  install_dependencies.sh  langgraph_test_report.md  llm_methods.txt  llm_methods_clean.txt  main.py  methods_to_insert.txt  prompt.md  prompt2.md  pyproject.toml  report.md  report_generator_patch.diff  requirements.txt  temp_method.txt  test_cv.txt  test_cv_to_skill_pipeline.py  test_frontend.html  test_pdf_pipeline.py  test_report.md  test_skill_analyst.py
data/: cv_parser_config.json  market_data.json  sample_cv.txt
docs/: README.md  accuracy_analysis.md  architecture.md  tech_stack.md  usage_guide.md
frontend/: index.html  script.js  styles.css
reports/: report_analysis_20250919_033236_0.md  report_analysis_20250919_033326_0.md  report_analysis_20250919_033453_0.md  report_analysis_20250919_040025_0.md  report_analysis_20250919_045816_0.md  report_analysis_20250919_092432_0.md  report_analysis_20250919_092936_1.md  report_analysis_20250919_093126_2.md  report_analysis_20250919_093206_3.md  report_analysis_20250919_093254_4.md  report_analysis_20250919_094605_0.md  report_analysis_20250919_094740_1.md  report_analysis_20250919_094857_2.md  report_analysis_20250919_094932_3.md  report_analysis_20250919_095039_4.md  report_analysis_20250919_095132_5.md  report_analysis_20250919_095705_6.md  report_analysis_20250919_100940_0.md  report_analysis_20250919_101017_1.md  report_analysis_20250919_101203_2.md  report_analysis_20250919_101441_0.md  report_analysis_20250919_101558_1.md  report_analysis_20250919_113829_1.md  report_analysis_20250919_114213_0.md  report_analysis_20250919_123122_0.md  report_analysis_20250919_123300_1.md  report_analysis_20250919_123529_2.md  report_analysis_20250919_141400_0.md  report_analysis_20250919_141642_0.md  report_analysis_20250919_142639_0.md  report_analysis_20250919_143929_0.md  report_analysis_20250919_145403_0.md
src/: llm_client.py  schemas.py
src/agents/: cv_parser.py  market_intelligence.py  report_generator.py  report_generator.py.backup  report_generator.py.bak  skill_analyst.py
src/orchestrator/: workflow.py
tests/: test_workflow.py
