[project]
name = "ai-skill-gap-analyst"
version = "0.1.0"
description = "AI-powered CV skill gap analysis system using LangGraph multi-agent architecture"
readme = "README.md"
authors = [
    {name = "AI Developer", email = "developer@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "spacy>=3.8.0",
    "pdfminer.six>=20221105",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "click>=8.1.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "werkzeug>=2.3.0",
    "anthropic>=0.68.0",
    "requests>=2.32.5",
    "ollama>=0.3.0",
    "openai>=1.108.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
spacy = [
    "spacy>=3.8.0",  # Use latest version for Python 3.13 compatibility
    "numpy>=1.19.0",
]
test = [
    "pytest>=7.0.0", 
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.0.0"
]

[project.scripts]
analyze-cv = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.0.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
